# book-editor-template

./: .gitignore  README.md  chapter_version.py  count_chapter_words.py  create_chapter.py  entitlements.plist  format_markdown.py  increment_chapters.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  create_major_release.yaml  generate_book_pdf.yaml  release-macos.yml
installer/macos/: build-pkg.sh
installer/macos/scripts/: postinstall
installer/windows/: installer.nsi
src/book_editor/: __init__.py  __main__.py  app.py
src/book_editor/config/: __init__.py
src/book_editor/services/: __init__.py  chapter_version.py  count_chapter_words.py  create_chapter.py  format_markdown.py  github_app.py  increment_chapters.py  pdf_build.py  repo.py
src/book_editor/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/repositories/: __init__.py
tests/services/: test_chapter_version.py
tests/utils/: test_utils.py
